5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1807_2565.log
== SUBMITION (2019-06-07 12:37:32) 
-- CODE:
from numpy import*

media = array(eval(input("media final de cada aluno:")))
horas = array(eval(input("numero de horas dos alunos:")))
ch = array(eval(input("carga horaria:")))

cont = zeros(3, dtype = int)


for i in range (0, size(media)):
	

	if(media[0] >= 5 and ((horas[0] >= 0.75 *  ch)):
		cont[0] = cont[0] + 1
		
	elif(media[1] < 5 and (horas[1] >= 0.75 * ch)):
		cont[1] = cont[1] + 1
	else:
		cont[2] = cont[2] + 1
print(cont)
		

-- EXECUTION TIME:
0.632403
-- ERROR:
  File "/home/codebench/codes/1807/2565/main.py", line 13
    if(media[0] >= 5 and ((horas[0] >= 0.75 *  ch)):
                                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:37:57) 
-- CODE:
from numpy import*

media = array(eval(input("media final de cada aluno:")))
horas = array(eval(input("numero de horas dos alunos:")))
ch = array(eval(input("carga horaria:")))

cont = zeros(3, dtype = int)


for i in range (0, size(media)):
	

	if(media[0] >= 5 and ((horas[0] >= 0.75 *  ch)):
		cont[0] = cont[0] + 1
		
	elif(media[1] < 5 and (horas[1] >= 0.75 * ch)):
		cont[1] = cont[1] + 1
	else:
		cont[2] = cont[2] + 1

print(cont)
		

-- ERROR:
File "XXXX", line 13
    if(media[0] >= 5 and ((horas[0] >= 0.75 *  ch)):
                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:38:09) 
-- CODE:
from numpy import*

media = array(eval(input("media final de cada aluno:")))
horas = array(eval(input("numero de horas dos alunos:")))
ch = array(eval(input("carga horaria:")))

cont = zeros(3, dtype = int)


for i in range (0, size(media)):
	

	if(media[0] >= 5 and ((horas[0] >= 0.75 *  ch))
		cont[0] = cont[0] + 1
		
	elif(media[1] < 5 and (horas[1] >= 0.75 * ch)):
		cont[1] = cont[1] + 1
	else:
		cont[2] = cont[2] + 1

print(cont)
		

-- ERROR:
File "XXXX", line 14
    cont[0] = cont[0] + 1
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 12:38:34) 
-- CODE:
from numpy import*

media = array(eval(input("media final de cada aluno:")))
horas = array(eval(input("numero de horas dos alunos:")))
ch = array(eval(input("carga horaria:")))

cont = zeros(3, dtype = int)


for i in range (0, size(media)):
	

	if(media[i] >= 5 and ((horas[i] >= 0.75 *  ch))):
		cont[0] = cont[0] + 1
		
	elif(media[1] < 5 and (horas[1] >= 0.75 * ch)):
		cont[1] = cont[1] + 1
	else:
		cont[2] = cont[2] + 1

print(cont)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-07 12:39:06) 
-- CODE:
from numpy import*

media = array(eval(input("media final de cada aluno:")))
horas = array(eval(input("numero de horas dos alunos:")))
ch = array(eval(input("carga horaria:")))

cont = zeros(3, dtype = int)


for i in range (0, size(media)):
	

	if(media[i] >= 5 and ((horas[i] >= 0.75 *  ch))):
		cont[0] = cont[0] + 1
		
	elif(media[1] < 5 and (horas[1] >= 0.75 * ch)):
		cont[1] = cont[1] + 1
	else:
		cont[2] = cont[2] + 1

print(cont)
		

-- EXECUTION TIME:
0.957096
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 0 5]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-07 12:40:19) 
-- CODE:
from numpy import*

media = array(eval(input("media final de cada aluno:")))
horas = array(eval(input("numero de horas dos alunos:")))
ch = array(eval(input("carga horaria:")))

cont = zeros(3, dtype = int)


for i in range (0, size(media)):
	

	if(media[i] >= 5 and (horas[i] >= 0.75 *  ch)):
		cont[0] = cont[0] + 1
		
	elif(media[1] < 5 and (horas[1] >= 0.75 * ch)):
		cont[1] = cont[1] + 1
	
	else:
		cont[2] = cont[2] + 1

print(cont)
		

-- EXECUTION TIME:
1.20514
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 0 5]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-07 12:42:15) 
-- CODE:
from numpy import*

media = array(eval(input("media final de cada aluno:")))
horas = array(eval(input("numero de horas dos alunos:")))
ch = array(eval(input("carga horaria:")))

cont = zeros(3, dtype = int)


for i in range (0, size(media)):
	

	if(media[i] >= 5 and (horas[i] >= 0.75 *  ch)):
		cont[0] = cont[0] + 1
		
	elif(media[i] < 5 and (horas[i] >= 0.75 * ch)):
		cont[1] = cont[1] + 1
	
	else:
		cont[2] = cont[2] + 1

print(cont)
		

-- EXECUTION TIME:
0.937622
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
